--- a/2.html
+++ b/2.html
@@ -1,24 +1,34 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB - CSS</title>
+  <title>WEB - CSS - 박스모델 </title>
   <meta charset="utf-8">
   <style>
     a {
       color:rgb(168, 141, 141);
     }
+    /*block level element */
+    h1 {border:4px solid rgb(129, 135, 228);}
+    h2 {border:3px solid rgb(129, 135, 228);
+        padding:20px;
+        margin:20px;
+        display:block;
+        width:100px;}
+    /*inline element*/
+    a2 {border: 2px solid rgb(129, 135, 228);}
   </style>
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">CSS</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html">CSS</a></li>
+    <li><a href="2.html">박스모델</a></li>
+    <li><a href="3.html">박스모델2</a></li>
+    <li><a href="4.html">그리드 반응형</a></li>
   </ol>
   <h2>CSS</h2>
   <p>
-    Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language.[1] Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.
+    Cascading Style Sheets <a2>(CSS)</a2> is a style sheet language used for describing the presentation of a document written in a markup language.[1] Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.
   </p>
   </body>
   </html>
