--- a/3.html
+++ b/3.html
@@ -4,17 +4,41 @@
   <title>WEB - CSS</title>
   <meta charset="utf-8">
   <style>
+    body{
+      margin:0;
+    }
+    #active {
+      color:red;
+    }
+    .saw {
+      color:gray;
+    }
     a {
-      color:rgb(184, 168, 168);
+      color:black;
+      text-decoration: none;
+    }
+    h1 {
+      font-size:45px;
+      text-align: center;
+      border-bottom:1px solid rgb(99, 121, 232);
+      margin:0;
+      padding:20px;
+    }
+    ol{
+      border-right:1px solid rgb(99, 121, 232);
+      width:100px;
+      margin:0;
+      padding:20px;
     }
   </style>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html" class="saw">CSS</a></li>
+    <li><a href="2.html" class="saw" id="active">박스모델</a></li>
+    <li><a href="3.html">박스모델2</a></li>
+    <li><a href="4.html">그리드 반응형</a></li>
   </ol>
   <h2>CSS</h2>
   <p>
