--- a/4.html
+++ b/4.html
@@ -1,33 +1,63 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB - CSS</title>
+  <title>WEB - CSS - 그리드 - 반응형 </title>
   <meta charset="utf-8">
   <style>
+    body{
+      margin:0;
+    }
     #active {
       color:red;
     }
     .saw {
-      color:#cd9b9b;}
-   h1 {
-      color: #c59393; font-size: 45px; text-align: center;}
+      color:gray;
+    }
     a {
-      color: #000000;
+      color:black;
       text-decoration: none;
     }
+    @media(max-width:500px){
+    h1 {
+      font-size:45px;
+      text-align: center;
+      border-bottom:1px solid rgb(99, 121, 232);
+      margin:0;
+      padding:20px;
+    }
+    ol{
+      border-right:1px solid rgb(99, 121, 232);
+      width:100px;
+      margin:0;
+      padding:20px;
+    }
+    #grid{
+      display: grid;
+      grid-template-columns: 150px 1fr;
+    }
+    #grid ol{
+      padding-left:33px;
+    }
+    #grid #article{
+      padding-left:25px;
+    }}
   </style>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
+  <div id="grid">
   <ol>
-    <li><a href="1.html">CSS</a></li>
-    <li><a href="2.html">박스모델</a></li>
+    <li><a href="1.html" class="saw">CSS</a></li>
+    <li><a href="2.html" class="saw" id="active">박스모델</a></li>
     <li><a href="3.html">박스모델2</a></li>
     <li><a href="4.html">그리드 반응형</a></li>
   </ol>
+  <div id="article">
   <h2>CSS</h2>
   <p>
     Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language.[1] Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.
   </p>
-  </body>
-  </html>
+</div>
+</div>
+</body>
+</html>
