--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
   </ol>
   <h1>HTML</h1>
   <p><U><a href="https://www.wehago.com/landing/ko/home/" target="_blank" title="WEHAGO 가입">WEHAGO</a> </U>is the standard markup language for <strong>creating <u>web</u> pages</strong></p>
-<p><a href="1.html" title="1로 이동">1.이동</a></li></p>
-<p><a href="2.html" title="2로 이동">2.이동</a></li></p>
-<p><a href="3.html" title="3로 이동">3.이동</a></li></p>
+<p><a href="1.html" title="1로 이동">CSS</a></li></p>
+<p><a href="2.html" title="2로 이동">박스모델</a></li></p>
+<p><a href="3.html" title="3로 이동">박스모델2</a></li></p>
+<p><a href="4.html" title="4로 이동">그리드 반응형</a></li></p>
   </body>
 </html>
