--- a/1.html
+++ b/1.html
@@ -12,13 +12,16 @@
    h1 {
       color: #c59393; font-size: 45px; text-align: center;}
     a {
-      color: #000000;
+      color: #ff8686;
       text-decoration: none;
     }
   </style>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
+  <input type="button" value="night" onclick="
+  document.querySelector('body').style.backgroundColor='black'
+  ; document. querySelector('body').style.color='White';">
   <ol>
     <li><a href="1.html">CSS</a></li>
     <li><a href="2.html">박스모델</a></li>
