--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
 <p><a href="2.html" title="2로 이동">박스모델</a></li></p>
 <p><a href="3.html" title="3로 이동">박스모델2</a></li></p>
 <p><a href="4.html" title="4로 이동">그리드 반응형</a></li></p>
+<p><a href="숙제_index.html" title="4로 이동">숙제</a></li></p>
   </body>
 </html>
