--- a/A .html
+++ b/A .html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Don't Look Up</title>
+    <title>여우령 가구 도매 카다로그 A</title>
 
     <link rel="icon" href="https://www.svgrepo.com/show/423821/fox-origami-paper.svg" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
