--- a/A .html
+++ b/A .html
@@ -159,7 +159,9 @@
     </nav>
     <main>
         <div class="campagine-section text-center mt-5 mb-5">
-      <div><img src="https://cdn.discordapp.com/attachments/879521365340876852/1129241348487254107/-_-001_5.png"> </div> </div>
+            <div class="col-md-12 col-sm-12">
+      <div><img src="https://cdn.discordapp.com/attachments/879521365340876852/1129241348487254107/-_-001_5.png" class="img-fluid" alt="..."> </div> 
+    </div> </div>
    
 
 
@@ -167,12 +169,9 @@
         <button type="button" class="btn btn-dark"><a class="main-link" href="https://twitter.com/x1MAGINEx?s=20">메인으로 돌아가기</a></button>
     </button>
     <div class="container pt-5 pb-5">
-        <div class="row">
-            <div class="col-md-12 col-sm-12">
                 <div class="card">
-                    <img src="https://cdn.discordapp.com/attachments/879521365340876852/1129245294878531585/1-001.png"
-                       alt="...">
-                </div>
+                    <img src="https://cdn.discordapp.com/attachments/879521365340876852/1129245294878531585/1-001.png" class="img-fluid" alt="...">
+                    
             </div>
         </div>
     </div>
